# soft-synth

./: .gitignore  CMakeLists.txt  cmake.lua  dep.lua  main.cpp  synth.cpp  synth.h
lib/sdl2/: INSTALL_RECEIPT.json
lib/sdl2_image/: INSTALL_RECEIPT.json
lib/sdl2_image/.brew/: sdl2_image.rb
lib/sdl2_image/lib/: libSDL2_image-2.0.0.dylib
lib/sdl2_mixer/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/sdl2_mixer/.brew/: sdl2_mixer.rb
